# modern-asr

./: .gitignore  AGENTS.md  README.md  README_zh.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml  test.yml
docs/: architecture.md  contributing.md  getting-started.md  index.md  installation.md
docs/api/: audio-llm.md  base.md  pipeline.md
docs/models/: canary-qwen.md  fireredasr.md  funasr-nano.md  glm-asr.md  granite-speech.md  index.md  llama-omni.md  midasheng.md  mimo-asr.md  moonshine.md  paraformer.md  qwen-asr.md  qwen-omni.md  sensevoice.md  whisper.md
examples/: api_server.py  basic_usage.py  benchmark.py  config.yaml
scripts/: batch_test_models.py  subprocess_worker.py
src/modern_asr/: __init__.py  __main__.py  cli.py
src/modern_asr/backends/: __init__.py  base.py  onnx_backend.py  subprocess_backend.py  transformers_backend.py  vllm_backend.py
src/modern_asr/core/: __init__.py  audio_llm.py  base.py  config.py  pipeline.py  registry.py  subprocess_mixin.py  types.py
src/modern_asr/models/: __init__.py  canary_qwen.py  fireredasr.py  funasr_model.py  glm_asr.py  granite_speech.py  llama_omni.py  midasheng.py  mimo_asr.py  moonshine.py  qwen_asr.py  qwen_omni.py  sensevoice.py  whisper_model.py
src/modern_asr/utils/: __init__.py  audio.py  auto_install.py  log.py
tests/: README.md  __init__.py  test_audio_llm.py  test_base.py  test_config.py  test_integration.py  test_models_funasr.py  test_models_mimo.py  test_models_qwen.py  test_models_sensevoice.py  test_models_whisper.py  test_pipeline.py  test_registry.py  test_types.py  test_utils_audio.py
