[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modern-asr"
version = "0.2.10"
description = "A unified, extensible, and modern Python toolkit for LLM-based Automatic Speech Recognition (ASR)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Modern ASR Contributors" },
]
keywords = [
    "asr", "speech-recognition", "llm", "audio", "whisper",
    "fireredasr", "sensevoice", "qwen-asr", "mimo-asr",
    "glm-asr", "moonshine", "funasr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.8.0",
    "rich>=13.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
# Core inference backends
transformers = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.40.0",
    "accelerate>=0.25.0",
]
vllm = [
    "vllm>=0.5.5",
    "torch>=2.0",
]
onnx = [
    "onnxruntime>=1.17.0",
    "onnxruntime-gpu>=1.17.0; sys_platform != 'darwin'",
]

# Model-specific dependencies (optional, user picks what they need)
firered-asr = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.40.0",
    "sentencepiece>=0.2.0",
    "kaldi-native-fbank>=1.15",
    "kaldiio>=2.18.0",
    "cn2an>=0.5.23",
    "peft>=0.13.2",
    "soundfile>=0.12.0",
]
sensevoice = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "funasr>=1.1.0",
    "modelscope>=1.15.0",
]
fun-asr = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "funasr>=1.1.0",
    "modelscope>=1.15.0",
]
qwen-asr = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers==4.57.6",
    "qwen-asr>=0.0.6",
    "soundfile>=0.12.0",
]
mimo-asr = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.40.0",
    "soundfile>=0.12.0",
]
glm-asr = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.40.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.2.0",
]
whisper = [
    "openai-whisper>=20231117",
    "torch>=2.0",
]
moonshine = [
    "torch>=2.0",
    "useful-moonshine",
]

# Convenience bundles
all-models = [
    "modern-asr[firered-asr,sensevoice,fun-asr,qwen-asr,mimo-asr,glm-asr,whisper,moonshine]",
]
all-backends = [
    "modern-asr[transformers,vllm,onnx]",
]
all = [
    "modern-asr[all-models,all-backends]",
]

# Development dependencies (managed via uv sync --dev / --group docs)
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
]

[project.scripts]
masr = "modern_asr.cli:main"
modern-asr = "modern_asr.cli:main"

[project.urls]
Homepage = "https://github.com/vra/modern-asr"
Repository = "https://github.com/vra/modern-asr"
Issues = "https://github.com/vra/modern-asr/issues"

[tool.uv]
default-groups = ["dev"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [
    "/.venv",
    "/.venv312",
    "/.venv_py313",
    "/.venv_py314",
    "/.pytest_cache",
    "/.github",
    "/tests",
    "/docs",
    "/examples",
    "/.git",
]

[tool.hatch.build.targets.wheel]
packages = ["src/modern_asr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that load real model weights",
    "slow: tests that take significant time to run",
]
